--- a/Notes/01_Python/Docs/Day 8 List Assignments.ipynb
+++ b/Notes/01_Python/Docs/Day 8 List Assignments.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e6d44561",
    "metadata": {},
    "outputs": [
@@ -167,10 +167,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random list : [1, 2, 6, 5, 4, 5, 2, 2, 4, 4]\n",
-      "Ascending list : [1, 2, 2, 2, 4, 4, 4, 5, 5, 6]\n",
-      "Descending list : [6, 5, 5, 4, 4, 4, 2, 2, 2, 1]\n",
-      "Unique list : [1, 2, 4, 5, 6]\n"
+      "Random list : [2, 5, 6, 2, 4, 4, 2, 3, 3, 4]\n",
+      "Ascending list : [2, 2, 2, 3, 3, 4, 4, 4, 5, 6]\n",
+      "Descending list : [6, 5, 4, 4, 4, 3, 3, 2, 2, 2]\n",
+      "Unique list : [2, 3, 4, 5, 6]\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "fd45a405",
    "metadata": {},
    "outputs": [
@@ -210,8 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[14, 17, 1], [10, 5, 4], [5, 14, 1]]\n",
-      "Element at the second row and third column : 4\n"
+      "[[4, 19, 15], [11, 10, 5], [15, 13, 18]]\n",
+      "Element at the second row and third column : 5\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "17c11f4b",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "504d3dc2",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "1f3c06d2",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "8a46015c",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "6b056e11",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "132d242e",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 30), (16, 17), (4, 3), (31, 38), (25, 14), (19, 17), (33, 25), (12, 3), (45, 13), (40, 22)]\n"
+      "[(33, 48), (30, 35), (32, 37), (39, 41), (47, 46), (26, 32), (21, 43), (38, 34), (40, 9), (24, 35)]\n"
      ]
     }
    ],
@@ -503,14 +503,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3bfb0c11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "Reverse list : [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "def reverse_order():\n",
-    "    "
+    "def reverse_order(lst):\n",
+    "    # return lst[::-1]\n",
+    "    return sorted(lst, reverse=True)\n",
+    "\n",
+    "print(f\"Original list : {lst}\")\n",
+    "print(f\"Reverse list : {reverse_order(lst)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ece1870",
+   "metadata": {},
+   "source": [
+    "### Assignment 14: List Rotation\n",
+    "\n",
+    "Write a function that rotates a list by n positions. Print the original and rotated lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5421e62e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "Reverse list : [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rotate_list(lst, n):\n",
+    "    return lst[n:] + lst[:n]\n",
+    "\n",
+    "print(f\"Original list : {lst}\")\n",
+    "print(f\"Reverse list : {rotate_list(lst, 5)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "295e39b8",
+   "metadata": {},
+   "source": [
+    "### Assignment 15: List Intersection\n",
+    "\n",
+    "Write a function that takes two lists and returns a new list containing only the elements that are present in both lists. Print the intersected list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "491ec839",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# def intersected_list(lst1, lst2):\n",
+    "#     return list(set(lst1) & set(lst2))\n",
+    "\n",
+    "# def intersected_list(lst1, lst2):\n",
+    "#     return [val for val in lst1 if val in lst2]\n",
+    "\n",
+    "def intersected_list(lst1, lst2):\n",
+    "    return list(set(lst1).intersection(lst2))\n",
+    "\n",
+    "# def intersected_list(lst1, lst2):\n",
+    "#     return [list(filter(lambda x: x in lst1, sublist)) for sublist in lst2]\n",
+    "    \n",
+    "\n",
+    "l1 = [1,2,3,4,5]\n",
+    "l2 = [3,4,5,6,7]\n",
+    "print(intersected_list(l1, l2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e10d11a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
