kmean part update
kmean part update

--- a/Zero_shot_Learning/Notebook/Kmean by kiran.ipynb
+++ b/Zero_shot_Learning/Notebook/Kmean by kiran.ipynb
@@ -23,26 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "45d5fe3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Path to your image dataset (200 folders)\n",
-    "IMAGE_DIR = os.path.join('..', 'Dataset', 'CUB_Dataset', 'CUB_Dataset', 'CUB_200_2011', 'images')\n",
-    "image_folder_path = IMAGE_DIR\n",
-    "\n",
-    "# Parameters\n",
-    "IMG_SIZE = (224, 224)  # Image size for the CNN\n",
-    "N_CLUSTERS = 2 # Number of clusters\n",
-    "\n",
-    "# Load pre-trained VGG16 model and remove the top layers\n",
-    "base_model = VGG16(weights='imagenet')\n",
-    "vgg_model = Model(inputs=base_model.input, outputs=base_model.get_layer('fc1').output)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "0305f655",
    "metadata": {},
@@ -60,19 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "id": "e631faa4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 1.95 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extract_features_from_image():\n",
     "    \n",
@@ -156,6 +127,37 @@
     "# Function to predict with the loaded model\n",
     "def predict(model, data):\n",
     "    return model.predict(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "45d5fe3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to ..\\Models\\vgg_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path to your image dataset (200 folders)\n",
+    "IMAGE_DIR = os.path.join('..', 'Dataset', 'CUB_Dataset', 'CUB_Dataset', 'CUB_200_2011', 'images')\n",
+    "image_folder_path = IMAGE_DIR\n",
+    "\n",
+    "# Parameters\n",
+    "IMG_SIZE = (224, 224)  # Image size for the CNN\n",
+    "N_CLUSTERS = 2 # Number of clusters\n",
+    "\n",
+    "# Load pre-trained VGG16 model and remove the top layers\n",
+    "base_model = VGG16(weights='imagenet')\n",
+    "vgg_model = Model(inputs=base_model.input, outputs=base_model.get_layer('fc1').output)\n",
+    "\n",
+    "vgg_model_file_path = os.path.join('..', 'Models', 'vgg_model.pkl')\n",
+    "save_model(vgg_model, vgg_model_file_path)"
    ]
   },
   {
@@ -12656,7 +12658,7 @@
    "source": [
     "%%time\n",
     "extract_features = extract_features_from_image()\n",
-    "print(len(extract_features))"
+    "# print(len(extract_features))"
    ]
   },
   {
@@ -16053,8 +16055,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "8ea86def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the results to a new CSV file\n",
+    "output_path = os.path.join('..', 'Dataset', 'final_cluster_cub_dataset.csv')  # Specify your output file path here\n",
+    "df.to_csv(output_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2b4ab90",
+   "metadata": {},
+   "source": [
+    "# Real time prediction using Kmean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f52ad70d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c65223",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc789cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492ebd70",
    "metadata": {},
    "outputs": [],
    "source": []
