--- a/Zero_shot_Learning/Notebook/Image_clusstering_cub_dataset.ipynb
+++ b/Zero_shot_Learning/Notebook/Image_clusstering_cub_dataset.ipynb
@@ -14904,9 +14904,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "shafin",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "shafin"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -14918,7 +14918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
