--- a/Notes/01_Python/Docs/Day 9 Tuple Datatype.ipynb
+++ b/Notes/01_Python/Docs/Day 9 Tuple Datatype.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "5edd5c96",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "278b72a1",
    "metadata": {},
    "outputs": [
@@ -515,40 +515,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ce6fc964",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 3 element : (0, 1, 2) \n",
+      "Middle_2_to_5 element : (2, 3, 4, 5) \n",
+      "Last 3 element : (8, 9, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_3, middle_2_to_5, last_3 = tpl[:3], tpl[2:6], tpl[-3:]\n",
+    "print(f\"First 3 element : {first_3} \\nMiddle_2_to_5 element : {middle_2_to_5} \\nLast 3 element : {last_3}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "244f9739",
+   "cell_type": "markdown",
+   "id": "8d00d2fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Assignment 4: Nested Tuples\n",
+    "\n",
+    "Create a nested tuple representing a 3x3 matrix and print the matrix. Access and print the element at the second row and third column."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d221ade2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(4, 5, 6)\n",
+      "(7, 8, 9)\n",
+      "Element at the second row and third column : 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix_tpl = ((1,2,3), (4,5,6), (7,8,9))\n",
+    "\n",
+    "print(\"Matrix : \")\n",
+    "for row in matrix_tpl:\n",
+    "    print(row)\n",
+    "\n",
+    "print(f\"Element at the second row and third column : {matrix_tpl[1][2]}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3b982c3",
+   "cell_type": "markdown",
+   "id": "664f0910",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Assignment 5: Tuple Concatenation\n",
+    "\n",
+    "Concatenate two tuples: (1, 2, 3) and (4, 5, 6). Print the resulting tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3acebd23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenate tuple : (1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tpl1, tpl2 = (1, 2, 3) , (4, 5, 6)\n",
+    "print(f\"Concatenate tuple : {tpl1 + tpl2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db5ab98f",
+   "metadata": {},
+   "source": [
+    "### Assignment 6: Tuple Methods\n",
+    "\n",
+    "Create a tuple with duplicate elements and count the occurrences of an element. Find the index of the first occurrence of an element in the tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5629652f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate elements tuple : (4, 4, 6, 4, 4, 4, 5, 2, 4, 2, 5, 2, 2, 3, 4, 6, 5, 2, 1, 1)\n",
+      "Occurrences of 4 : 7\n",
+      "Index of the first occurrence of 1 : 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicate_elements_tpl = (4, 4, 6, 4, 4, 4, 5, 2, 4, 2, 5, 2, 2, 3, 4, 6, 5, 2, 1, 1) \n",
+    "# tuple(random.randint(1,6) for _ in range(20))\n",
+    "print(f\"Duplicate elements tuple : {duplicate_elements_tpl}\")\n",
+    "print(f\"Occurrences of 4 : {duplicate_elements_tpl.count(4)}\")\n",
+    "print(f\"Index of the first occurrence of 1 : {duplicate_elements_tpl.index(1)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42ef1a2d",
+   "metadata": {},
+   "source": [
+    "### Assignment 7: Unpacking Tuples\n",
+    "\n",
+    "Create a tuple with 5 elements and unpack it into 5 variables. Print the variables.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "77133a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unpack variables : 1, 3, 4, 5, 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tpl1, tpl2, tpl3, tpl4, tpl5 = (1, 3, 4, 5, 2)\n",
+    "print(f\"Unpack variables : {tpl1}, {tpl2}, {tpl3}, {tpl4}, {tpl5}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "815bb5ba",
+   "metadata": {},
+   "source": [
+    "### Assignment 8: Tuple Conversion\n",
+    "\n",
+    "Convert a list of the first 5 positive integers to a tuple. Print the tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d05d2122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List : [1, 3, 4, 5, 2] \n",
+      "Tuple : (1, 3, 4, 5, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_5 = [1, 3, 4, 5, 2]\n",
+    "tpl_5 = tuple(lst_5)\n",
+    "print(f\"List : {lst_5} \\nTuple : {tpl_5}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ceecd4e",
+   "metadata": {},
+   "source": [
+    "### Assignment 9: Tuple of Tuples\n",
+    "\n",
+    "Create a tuple containing 3 tuples, each with 3 elements. Print the tuple of tuples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "78ef4ea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2, 3), (4, 5, 6), (7, 8, 9))\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix_tpl = ((1,2,3), (4,5,6), (7,8,9))\n",
+    "print(matrix_tpl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "665cf482",
+   "metadata": {},
+   "source": [
+    "### Assignment 10: Tuple and List\n",
+    "\n",
+    "Create a tuple with the first 5 positive integers. Convert it to a list, append the number 6, and convert it back to a tuple. Print the resulting tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "00b99287",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original tuple : (1, 2, 3, 4, 5)\n",
+      "Result tuple : (1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tpl = (1,2,3,4,5)\n",
+    "print(f\"Original tuple : {tpl}\")\n",
+    "lst = list(tpl)\n",
+    "lst.append(6)\n",
+    "tpl = tuple(lst)\n",
+    "print(f\"Result tuple : {tpl}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b330a7",
+   "metadata": {},
+   "source": [
+    "### Assignment 11: Tuple and String\n",
+    "\n",
+    "Create a tuple with the characters of a string. Join the tuple elements into a single string. Print the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "70796a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple with characters : ('H', 'e', 'l', 'l', 'o')\n",
+      "String : Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_str = 'Hello'\n",
+    "str_tpl = tuple(my_str) # ('a', 'b', 'c', 'd', 'e', 'f')\n",
+    "print(f\"Tuple with characters : {str_tpl}\")\n",
+    "onestr = ''.join(str_tpl)\n",
+    "print(f\"String : {onestr}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25e7a0f0",
+   "metadata": {},
+   "source": [
+    "### Assignment 12: Tuple and Dictionary\n",
+    "\n",
+    "Create a dictionary with tuple keys and integer values. Print the dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b4de243a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 23, 3: 123, (1, 2): 1234, (2, 3): 12345}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {\n",
+    "    (1): 1,\n",
+    "    (2): 23,\n",
+    "    (3): 123,\n",
+    "    (1, 2): 1234,\n",
+    "    (2, 3): 12345\n",
+    "}\n",
+    "\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cbe5458",
+   "metadata": {},
+   "source": [
+    "### Assignment 13: Nested Tuple Iteration\n",
+    "\n",
+    "Create a nested tuple and iterate over the elements, printing each element.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c292cd44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "nested_tpl = ((1,2,3), (4,5,6), (7,8,9))\n",
+    "\n",
+    "for row in nested_tpl:\n",
+    "    for elem in row:\n",
+    "        print(elem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca07a68b",
+   "metadata": {},
+   "source": [
+    "### Assignment 14: Tuple and Set\n",
+    "\n",
+    "Create a tuple with duplicate elements. Convert it to a set to remove duplicates and print the resulting set.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bc92664e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate elements tuple : (4, 4, 6, 4, 4, 4, 5, 2, 4, 2, 5, 2, 2, 3, 4, 6, 5, 2, 1, 1)\n",
+      "Without duplicate elements tuple : (1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicate_elements_tpl = (4, 4, 6, 4, 4, 4, 5, 2, 4, 2, 5, 2, 2, 3, 4, 6, 5, 2, 1, 1) \n",
+    "set_elements_tpl = tuple(set(duplicate_elements_tpl))\n",
+    "print(f\"Duplicate elements tuple : {duplicate_elements_tpl}\")\n",
+    "print(f\"Without duplicate elements tuple : {set_elements_tpl}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493276ff",
+   "metadata": {},
+   "source": [
+    "### Assignment 15: Tuple Functions\n",
+    "\n",
+    "Write functions that take a tuple and return the minimum, maximum, and sum of the elements. Print the results for a sample tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a34192dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min : 1 \n",
+      "Max : 6 \n",
+      "Sum : 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "def min_max_sum(tpl):\n",
+    "    print(f\"Min : {min(tpl)} \\nMax : {max(tpl)} \\nSum : {sum(tpl)}\")\n",
+    "\n",
+    "min_max_sum(set_elements_tpl)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acebd23",
+   "id": "5b2a33ef",
    "metadata": {},
    "outputs": [],
    "source": []
