--- a/Zero_shot_Learning/Notebook/Kmean by kiran.ipynb
+++ b/Zero_shot_Learning/Notebook/Kmean by kiran.ipynb
@@ -16074,33 +16074,148 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f52ad70d",
+   "cell_type": "markdown",
+   "id": "457c7ede",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. libs\n",
+    "2. load model (vgg16 and kmean)\n",
+    "3. read image \n",
+    "4. preprocess inage \n",
+    "5. from vgg16 feture extract from image\n",
+    "6. from kmean predict cluster"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "d8c65223",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# libs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "9fc789cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded from ..\\Models\\vgg_model.pkl\n",
+      "Model loaded from ..\\Models\\kmean_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the models (vgg16 and kmean)\n",
+    "vgg16_model_file_path = os.path.join('..', 'Models', 'vgg_model.pkl')\n",
+    "vgg16_model = load_model(vgg16_model_file_path)\n",
+    "\n",
+    "kmean_model_file_path = os.path.join('..', 'Models', 'kmean_model.pkl')\n",
+    "kmean_model = load_model(kmean_model_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "492ebd70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_paths</th>\n",
+       "      <th>class_lable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>..\\Dataset\\CUB_Dataset\\CUB_Dataset\\CUB_200_201...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>..\\Dataset\\CUB_Dataset\\CUB_Dataset\\CUB_200_201...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         image_paths  class_lable\n",
+       "0  ..\\Dataset\\CUB_Dataset\\CUB_Dataset\\CUB_200_201...            0\n",
+       "1  ..\\Dataset\\CUB_Dataset\\CUB_Dataset\\CUB_200_201...            0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "1/1 [==============================] - 2s 2s/step\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read images\n",
+    "display(path_df.head(2))\n",
+    "print('\\n')\n",
+    "\n",
+    "# Iterate over each row in the DataFrame\n",
+    "for _, row in path_df.iterrows():\n",
+    "    image_path = row['image_paths']\n",
+    "    cluster_class = row['class_lable']\n",
+    "    \n",
+    "    # Load and preprocess image\n",
+    "    image = load_and_preprocess_image(image_path)\n",
+    "\n",
+    "    # Extract features\n",
+    "    feature = vgg16_model.predict(image)\n",
+    "    \n",
+    "    # Convert features to numpy array\n",
+    "    features = np.array(feature)\n",
+    "    \n",
+    "    # Predict with the loaded model\n",
+    "    y_pred_clusters = predict(kmean_model, features)\n",
+    "    print(y_pred_clusters)\n",
+    "    \n",
+    "    break"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492ebd70",
+   "id": "4f9c5fe7",
    "metadata": {},
    "outputs": [],
    "source": []
